# betagen

./: .gitattributes  .travis.yml  MANIFEST.in  setup.cfg  setup.py
betagen/: __init__.py  _version.py  utils.py
betagen/test/: basic_test.py
